# neurascale

./: .dockerignore  .env.performance  .eslintignore  .gitignore  .gitleaks.toml  .gitleaksignore  .neon  .pnpmfile.cjs  .pre-commit-config.yaml  .runner  .trivyignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  EXECUTE_THIS_NOW.sh  FIX_DOCKER_REGISTRY_ARCHITECTURE.md  FIX_PRODUCTION_NOW.sh  LICENSE  PHASE2_COMPLETION_ANNOUNCEMENT.md  README.md  RUNNER_SETUP_SUMMARY.md  SECURITY.md  TERRAFORM_CLOUD_SETUP.md  auto-setup-runners.sh  developer.py  fix-google-maps.md  fix_final_imports.sh  fix_monitoring_modules.sh  fix_protocols_monitoring.sh  fix_remaining_issues.sh  fix_remaining_linting.sh  gcp-project-selector-container-specifications.md  google_ads_setup.py  google_analytics_setup.py  instructions.md  iterate_gcp_ui.sh  monitor-pipeline.sh  neurascale_complete_project.md  package-lock.json  (+10 more)
neural-engine/: .dockerignore  .env.example  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MINDMELD.md  Makefile  Neural-Management-System.md  PHASE1_PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE_8_CORRECTION_COMPLETE.md  PHASE_RENUMBERING_SUMMARY.md  README.md  SELF_HOSTED_RUNNER.md  SETUP_GOOGLE_CLOUD.md  __init__.py  app.yaml  backend-bci-recommendations.md  cloudbuild.yaml  configure-gcp.sh  constraints.txt  docker-compose.yml  fix_final_flake8.py  fix_flake8.py  instructions.md  mypy.ini  prepare-runner-cache.sh  pyproject.toml  pytest.ini  requirements-alpine-api.txt  requirements-ci.txt  requirements-dev.txt  requirements-minimal-alpine.txt  requirements-minimal.txt  requirements-no-ml.txt  requirements.txt  setup.py  test_mcp_servers.py
neural-engine/api/: __init__.py  device_api.py  processing_api.py
neural-engine/core/: dependencies.py
neural-engine/dataflow/: __init__.py  neural_processing_pipeline.py  setup.py
neural-engine/devices/: __init__.py  base.py  device_manager.py  device_registry.py  health_monitor.py  lsl_integration.py
neural-engine/docker/: CLI_USAGE.md  Dockerfile.api  Dockerfile.ingestion  Dockerfile.mcp-server  Dockerfile.processor  Dockerfile.processor.alpine-backup  Dockerfile.processor.hybrid  Dockerfile.secure  K8S_INTEGRATION.md  README.md  apply-alpine-migration.sh  docker-compose.dev.yml  docker-compose.yml  fix-alpine-tensorflow.sh  migrate-to-alpine.sh
neural-engine/docs/: DEPLOYMENT.md  NEURAL_ENGINE_PHASE2.md  cost-optimization-strategy.md  device-api-documentation.md  gcp-setup.md  phase-8-implementation-summary.md  phase-9-performance-monitoring-implementation.md
neural-engine/examples/: custom_dataset_example.py  device_api_example.py  device_example.py  device_interface_demo.py  ingestion_example.py  monitoring_usage.py  physionet_example.py
neural-engine/functions/: __init__.py  base_processor.py
neural-engine/kubernetes/: README.md
neural-engine/ledger/: README.md  __init__.py  event_processor.py  (+6 more)
(+1137 files in other folders)
